More cleanups: private, final, and consistent chaining of SQLFragments